# empire-cli

./: .gitignore  README.md  setup.cfg
src/: main.py
src/cli/: agent.py  cli_base.py  listener.py  module.py  stager.py
src/cli/utils/: print_util.py
src/empire_cli/: main.py
src/empire_cli/api/: config.py  rest.py
src/empire_cli/cli/: module.py  stager.py
