[metadata]
name = empire-cli
version = 0.0.1
author = Max Beckmann
description = A slim CLI for Empire
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
install_requires =
    typer
    requests
    pyyaml
    inflection
    tabulate

[options.entry_points]
console_scripts =
    mpr = main:main
    empire = main:main

[options.packages.find]
where = src
